# oxifish

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  version.yml
docs/rfcs/: 0001-twofish-session-api.handoff.md  0001-twofish-session-api.md  0002-toolchain-sync.handoff.md  0002-toolchain-sync.md  0003-interop-breadth.handoff.md  0003-interop-breadth.md
python/oxifish/: __init__.py  __init__.pyi  _oxifish.pyi
scripts/: benchmark.py  check_release_version.py
src/: engine.rs  errors.rs  key.rs  lib.rs  session.rs  xts.rs  xts_py.rs
tests/: conftest.py  test_auto_iv.py  test_ctr_width.py  test_ecb.py  test_enum_sync.py  test_hypothesis.py  test_hypothesis_chunking.py  test_kdbx_golden.py  test_key.py  test_misuse_and_concurrency.py  test_one_shot_cbc.py  test_one_shot_modes.py  test_oxifish.py  test_readme.py  test_streaming.py  test_toolchain_sync.py  test_xts.py
tests/fixtures/: README.md  make_fixture.py  twofish_golden.kdbx
