[package]
name = "oxifish"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Python bindings for Twofish block cipher"
repository = "https://github.com/coreyleavitt/oxifish"
keywords = ["twofish", "encryption", "cipher", "keepass", "cryptography"]
categories = ["cryptography", "api-bindings"]
readme = "README.md"

[lib]
name = "oxifish"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.27"
twofish = { version = "0.7", features = ["zeroize"] }
cbc = { version = "0.1", features = ["zeroize"] }
ctr = { version = "0.9", features = ["zeroize"] }
cfb-mode = { version = "0.8", features = ["zeroize"] }
ofb = { version = "0.6", features = ["zeroize"] }
cipher = { version = "0.4", features = ["zeroize"] }
zeroize = { version = "1.7", features = ["derive"] }
getrandom = "0.4"

[dev-dependencies]
hex = "0.4"
static_assertions = "1.1"

[profile.release]
lto = true
codegen-units = 1
